--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif !important;
+  font-family: 'Playfair Display', Georgia, 'Times New Roman', serif !important;
   font-size: 2.25rem;
 }
 
@@ -25,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif !important;
+  font-family: 'Playfair Display', Georgia, 'Times New Roman', serif !important;
 }
 
 .display-4 {
@@ -60,14 +60,15 @@ h6 {
 }
 
 .nav-scroller .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
-  color:black!important;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 0.875rem;
+  color: black !important;
 }
 
-.nav-scroller a.active, .nav-scroller a:hover{
-  background:#dbebff;
+.nav-scroller a.active,
+.nav-scroller a:hover {
+  background: #dbebff;
 }
 
 .card-img-right {
@@ -103,7 +104,7 @@ h6 {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 }
 
 /*
@@ -133,7 +134,7 @@ h6 {
   margin-bottom: 4rem;
 }
 
-.blog-pagination>.btn {
+.blog-pagination > .btn {
   border-radius: 2rem;
 }
 
@@ -146,7 +147,7 @@ h6 {
 }
 
 .blog-post-title {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
   font-size: 2.5rem;
 }
 
@@ -164,7 +165,7 @@ h6 {
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
+  border-top: 0.05rem solid #e5e5e5;
 }
 
 .blog-footer p:last-child {
